# backend/src/interface/server/index.ts
@@ -1,17 +1,24 @@
 import express, { Application, Request, Response, urlencoded } from "express";
 import { CONFIG } from "../../config";
-import { roomsRouter } from "./handler";
+import { initApp } from "../../lib/firebase-admin";
+import { gamesRouter, roomsRouter } from "./handler";
+import cors from "cors";
+
 const { server } = CONFIG;
+initApp();
 const app: Application = express();
 
+app.use(cors());
 app.use(express.json());
 app.use(urlencoded({ extended: true }));
 
+// APIサーバーのヘルスチェック用
 app.get("/health", async (_req: Request, res: Response) => {
   return res.status(200).send({ status: "ok" });
 });
 
-app.use("/rooms", roomsRouter);
+app.use(roomsRouter);
+app.use(gamesRouter);
 
 try {
   app.listen(server.port, () => {
