# backend/src/model/game.ts
@@ -1,0 +1,11 @@
+export type GamePlayer = {
+  id: string;
+  userId: string;
+  gameId: string;
+  isFramer: boolean;
+  character: {
+    id: string;
+    displayName: string;
+    imageUrl: string;
+  };
+};
